# PyTaskbar

./: README.md  example.py  pyproject.toml
PyTaskbar/: ProgressAPI.py  __init__.py
